[package]
name = "world-builder"
version = "0.2.0"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Map specifications

firecore-world = { git = "https://github.com/DoNotDoughnut/firecore-world" }

# Serialization

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.5"
ron = "0.6"

# Other

ahash = { version = "0.7", features = ["serde"] }
firecore-util = { git = "https://github.com/DoNotDoughnut/firecore-util" }
image = { version = "0.23.12", default-features = false, features = ["png", "tga"] }
smallvec = { version = "1.6", features = ["serde"] }