[package]
name = "world-builder"
version = "0.3.0-beta.6"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

### Map specifications

firecore-world = { git = "https://github.com/DoNotDoughnut/firecore-world" }
#firecore-world = { path = "../../firecore/firecore-world" }

firecore-util = { git = "https://github.com/DoNotDoughnut/firecore-util" }
#firecore-util = { path = "../../firecore/firecore-util" }

### Serialization

serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
toml = "0.5"
ron = "0.6"

### Collections

ahash = { version = "0.7", features = ["serde"] }

### Other

image = { version = "0.23.12", default-features = false, features = ["png", "tga"] }

[dev-dependencies]
firecore-world = { git = "https://github.com/DoNotDoughnut/firecore-world", features = ["pathfind"] }
#firecore-world = { path = "../../firecore/firecore-world", features = ["pathfind"] }